<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.getlosthere.ohmynews.activities.FilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:id="@+id/tvBeginDateLabel"
        android:layout_alignBottom="@+id/etDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDate"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvBeginDateLabel"
        android:layout_toEndOf="@+id/tvBeginDateLabel"
        android:onClick="showDatePickerDialog"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrderLabel"
        android:layout_below="@+id/tvBeginDateLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/tvCategoryLabel"
        android:layout_below="@+id/tvSortOrderLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spSortOrder"
        android:entries="@array/sort_order_array"
        android:prompt="@string/sort_order_prompt"
        android:layout_alignBottom="@+id/tvSortOrderLabel"
        android:layout_alignLeft="@+id/etDate"
        android:layout_alignStart="@+id/etDate"
        android:spinnerMode="dropdown"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:id="@+id/cbArts"
        android:layout_alignTop="@+id/tvCategoryLabel"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:checked="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbSports"
        android:layout_alignStart="@+id/cbSports"
        android:layout_marginTop="29dp"
        android:checked="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignStart="@+id/spSortOrder"
        android:layout_marginTop="26dp"
        android:checked="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:onClick="saveSettings"/>
</RelativeLayout>
